# fprod-projekt

./: README.md  hie.yaml  kuery.cabal
example/: Main.hs
example/Example/: Function.hs  Monad.hs
example/Example/Mongo/: Function.hs  Monad.hs
example/Example/MySql/: Monad.hs
lib/: Kuery.hs
lib/Kuery/: Connection.hs  Helpers.hs  Operations.hs  Result.hs
lib/Kuery/Language/: Base.hs  Operators.hs  Result.hs  Value.hs
lib/Kuery/Monad/: Operations.hs
lib/Kuery/Monad/Providers/: Mongo.hs
lib/Kuery/Providers/: Mongo.hs  MySql.hs
lib/Kuery/Providers/Mongo/: Base.hs
lib/Kuery/Providers/MySql/: Base.hs
