cabal-version:       3.0

name:                kuery
version:             0.1.0.0
author:              Pascal Senn, Marc Lenicka
maintainer:          pascal.senn@students.fhnw.ch, marc.lenicka@students.fhnw.ch
build-type:          Simple

common common-properties
  default-language: Haskell2010
  build-depends:
    base >=4.13 && <5
    ,mongoDB >= 2.7.0.0 
    ,text
  ghc-options:
    -Wall

library
  import:              common-properties
  exposed-modules:     Kuery.Providers.Mongo, Kuery.Helpers, Kuery.Language.Value, Kuery.Language.Operators, Kuery.Language.Base, Kuery.Operations, Kuery
  build-depends:       
  hs-source-dirs:      lib

executable example
  import:              common-properties
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       kuery
  hs-source-dirs:      example
